# Soundcloud-ListenAlong-Client

./: .gitignore  CMakeLists.txt  README.md
src/: core.cpp  core.hpp  discord_manager.cpp  discord_manager.hpp  main.cpp  party.cpp  party.hpp  party_manager.cpp  party_manager.hpp  sc_discord.cpp  sc_discord.hpp  server.cpp  server.h  server.hpp  track.hpp
